<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/calculator"
                    android:layout_weight="1"
                    android:contentDescription="@string/ImageView" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/txtCalculator"
                    android:gravity="center"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/txtVersion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:text="@string/txtMSSV" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:text="@string/txtDiaChi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#627aad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#20eb31"
                        android:orientation="horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="3">

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/callsale"
                            android:contentDescription="@string/btnCall"
                            android:id="@+id/btnCallSale" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center|left"
                            android:textSize="15sp"
                            android:text="@string/txtGoiChoBoPhanBanHang"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/sendmessage"
                        android:contentDescription="@string/btnSendSMS"
                        android:id="@+id/btnSendSMS"
                        tools:ignore="NestedWeights" />

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/sendmail"
                        android:contentDescription="@string/btnShareEmail"
                        android:id="@+id/btnSendEmail" />

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/googlemap"
                        android:contentDescription="@string/btnGoogleMap"
                        android:id="@+id/btnGoogleMap" />

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/share"
                        android:contentDescription="@string/btnShareText"
                        android:id="@+id/btnShareText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSendSMS"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSendEmail"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtViewAddress"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtShareText"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
